--- a/package.json
+++ b/package.json
@@ -16,6 +16,31 @@
     "Particleground.js": "^1.1.0",
     "grunt-contrib-clean": "^1.0.0",
     "load-grunt-tasks": "^3.5.2",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "autoprefixer-loader": "^3.2.0",
+    "body-parser": "^1.17.1",
+    "clipboard": "^2.0.1",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "echarts": "^3.8.5",
+    "exports-loader": "^0.7.0",
+    "express": "^4.15.2",
+    "fastclick": "^1.0.6",
+    "http-proxy": "^1.16.2",
+    "iscroll": "^5.2.0",
+    "jquery": "^1.9.1",
+    "js-base64": "^2.4.3",
+    "js-md5": "^0.7.3",
+    "jweixin": "^1.0.0",
+    "mescroll": "0.0.3",
+    "pgwslideshow": "^2.0.0",
+    "postcss-loader": "^2.1.3",
+    "postcss-plugin-px2rem": "^0.7.0",
+    "postcss-px2rem": "^0.3.0",
+    "postcss-px2rem-exclude": "0.0.6",
+    "px2rem-loader": "^0.1.8",
+    "script-loader": "^0.7.2",
+    "sha256": "^0.2.0",
+    "zepto": "^1.2.0"
   }
 }
