--- a/web-crawler/package.json
+++ b/web-crawler/package.json
@@ -4,13 +4,15 @@
   "description": "爬虫文件",
   "dependencies": {
     "async": "^2.6.1",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.6.2",
     "express": "^4.13.3",
     "fs": "0.0.1-security",
     "http-proxy": "^1.15.2",
     "https": "^1.0.0",
+    "log4js": "^4.0.2",
+    "mysql": "^2.16.0",
     "request": "^2.88.0",
     "superagent": "^4.0.0",
     "url": "^0.11.0"
