--- a/web-crawler/package.json
+++ b/web-crawler/package.json
@@ -7,14 +7,17 @@
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.6.2",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.13.3",
     "fs": "0.0.1-security",
     "http-proxy": "^1.15.2",
     "https": "^1.0.0",
     "log4js": "^4.0.2",
     "mysql": "^2.16.0",
+    "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "superagent": "^4.0.0",
+    "superagent-charset": "^1.2.0",
     "url": "^0.11.0"
   }
 }
